<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/color"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/title_block_number"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/title_block_previous_hash"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_previous_hash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                tools:text="Previous hash" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/title_block_timestamp"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                tools:text="Timestamp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/title_block_data"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                tools:text="Data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/title_block_hash"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_hash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textColor"
                tools:text="Hash" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary" />

</FrameLayout>